--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
-  "name": "❤️𝐑_𝐎_𝐁_𝐈_𝐍❤️",
-  "description": "Powerful whatsapp bot made by sihilel",
-  "logo": "https://telegra.ph/file/ad25b2227fa2a1a01b707.jpg",
+  "name": "RANUMITHA-X-MD",
+  "description": "Powerful whatsapp bot made by ranumitha",
+  "logo": "https://raw.githubusercontent.com/Ranumithaofc/RANU-FILE-S-/refs/heads/main/images/IMG-20250711-WA0010.jpg",
   "keywords": ["bot"],
   "success_url": "/",
 
