--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "api-dylux": "^1.8.5",
     "mongoose": "^8.16.5",
     "fb-downloader-scrapper": "^3.0.1",
-    "canvas": "^3.1.2",
-    "youtubedl-core": "^4.11.7"
+    "canvas": "^3.1.2"
   }
 }
