--- a/package.json
+++ b/package.json
@@ -10,22 +10,22 @@
   },
   "dependencies": {
     "@whiskeysockets/baileys": "^6.7.18",
-    "pino": "^9.7.0",
-    "pm2": "^6.0.8",
+    "pino": "latest",
+    "pm2": "latest",
     "util": "^0.12.5",
-    "express": "^5.1.0",
+    "express": "latest",
     "axios": "^1.11.0",
     "file_size_url": "^1.0.6",
-    "fs-extra": "^11.3.0",
+    "fs-extra": "latest",
     "path": "^0.12.7",
-    "node-fetch": "^3.3.2",
-    "megajs": "^1.3.7",
+    "node-fetch": "latest",
+    "megajs": "latest",
     "vm": "^0.1.0",
-    "qrcode-terminal": "^0.12.0",
+    "qrcode-terminal": "latest",
     "yt-search": "^2.13.1",
     "api-dylux": "^1.8.5",
-    "mongoose": "^8.16.5",
-    "fb-downloader-scrapper": "^3.0.1",
+    "mongoose": "latest",
+    "fb-downloader-scrapper": "latest",
     "canvas": "^3.1.2"
   }
 }
