--- a/package.json
+++ b/package.json
@@ -10,18 +10,18 @@
   },
   "dependencies": {
     "@whiskeysockets/baileys": "github:MRSHABAN42/SHABAN-Baileys",
-    "pino": "latest",
-    "pm2": "latest",
+    "pino": "^7.0.5",
+    "pm2": "^6.0.5",
     "util": "^0.12.5",
     "express": "latest",
     "axios": "^1.11.0",
     "file_size_url": "^1.0.6",
-    "fs-extra": "latest",
+    "fs-extra": "^11.1.0",
     "path": "^0.12.7",
     "node-fetch": "^2.6.1",
-    "megajs": "latest",
+    "megajs": "^1.1.0",
     "vm": "^0.1.0",
-    "qrcode-terminal": "latest",
+    "qrcode-terminal": "^0.12.0",
     "yt-search": "^2.13.1",
     "api-dylux": "^1.8.5",
     "mongoose": "latest",
