--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "restart": "pm2 restart RANUMITHA-X-MD"
   },
   "dependencies": {
-    "@whiskeysockets/baileys": "github:MRSHABAN42/SHABAN-Baileys",
+    "@whiskeysockets/baileys": "github:XdKing2/Malvin-Baileys",
     "pino": "^7.0.5",
     "pm2": "^6.0.5",
     "util": "^0.12.5",
