--- a/package.json
+++ b/package.json
@@ -1,58 +1,68 @@
 {
   "name": "RANUMITHA-X-MD",
-  "version": "1.0.0",
-  "description": "A WhatsApp bot created using Node.js",
+  "version": "3.5.8",
+  "description": "A WhatsApp Bot Created By Hiruka Ranumitha",
   "main": "index.js",
   "scripts": {
     "start": "pm2 start index.js --deep-monitoring --attach --name RANUMITHA-X-MD",
     "stop": "pm2 stop RANUMITHA-X-MD",
     "restart": "pm2 restart RANUMITHA-X-MD"
   },
-  "dependencies": {
-    "@whiskeysockets/baileys": "github:XdKing2/Malvin-Baileys",
-    "pino": "^7.0.5",
-    "pm2": "^6.0.5",
-    "util": "^0.12.5",
-    "express": "latest",
-    "axios": "^1.11.0",
-    "file_size_url": "^1.0.6",
-    "fs-extra": "^11.1.0",
-    "path": "^0.12.7",
-    "node-fetch": "^2.6.1",
-    "megajs": "^1.1.0",
-    "vm": "^0.1.0",
-    "qrcode-terminal": "^0.12.0",
-    "yt-search": "^2.13.1",
-    "api-dylux": "^1.8.5",
-    "mongoose": "latest",
-    "fb-downloader-scrapper": "latest",
-    "canvas": "^3.1.2",
-    "@adiwajshing/keyed-db": "^0.2.4",
-    "@dark-yasiya/yt-dl.js": "^1.0.5",
+"dependencies": {
+    "@whiskeysockets/baileys": "github:Drayyyxd/XD-Baileys",
+    "@adiwajshing/keyed-db": "latest",
+    "@dark-yasiya/yt-dl.js": "1.0.5",
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "@vitalets/google-translate-api": "^9.2.1",
-    "@dark-yasiya/scrap":"^1.0.1",
-    "@bochilteam/scraper":"^5.0.1",
+    "@dark-yasiya/scrap":"1.0.1",    
+    "pino": "^7.0.5",
+    "pm2": "^6.0.8",
+    "util": "^0.12.4",
+    "jimp": "^0.16.1",
+    "express": "latest",
     "moment-timezone": "^0.6.0",
+    "axios": "^1.7.9",
     "crypto-digest-sync": "^1.0.0",
     "crypto-js": "latest",
+    "file_size_url": "1.0.4",
+    "fs-extra": "^11.1.0",
     "fs": "^0.0.1-security",
     "ffmpeg": "^0.0.4",
-    "file-type": "^21.0.0",
+    "file-type": "^16.5.3",
     "fluent-ffmpeg": "^2.1.2",
     "form-data": "^4.0.0",
     "google-tts-api": "^2.0.2",
+    "path": "^0.12.7",
+    "node-fetch": "^2.6.1",
     "btch-downloader": "^2.2.9",
-    "pdfkit": "^0.14.0",
-    "wa_set_pkg": "^1.0.5",
+    "megajs": "^1.3.7",
+    "pdfkit": "^0.17.1",
+    "wa_set_pkg": "1.0.5",
     "wa-sticker-formatter": "^4.4.4",
+    "path": "^0.12.7",
+    "vm": "^0.1.0",
     "adm-zip": "^0.5.16",
     "cheerio": "^1.0.0-rc.12",
     "ruhend-scraper" : "8.0.3",
+    "qrcode-terminal": "^0.12.0",
+    "yt-search":"2.11.1",
     "sequelize": "^6.37.5",
     "sqlite3": "^5.1.7",
-    "@mrnima/tiktok-downloader":"^1.0.0",
-    "@mrnima/facebook-downloader":"^1.0.0",
-    "mrnima-moviedl":"^1.0.0"
+    "vm": "^0.1.0",
+    "api-dylux":"latest",
+    "acrcloud": "^1.4.0",
+    "dotenv": "^16.0.0",
+    "javascript-obfuscator": "^4.0.0",
+    "mongoose": "^8.0.0",
+    "node-cache": "^5.1.1",
+    "node-webpmux": "^3.1.0",
+    "@octokit/rest": "latest",
+    "pdf-lib": "^1.17.1",
+    "qrcode-reader": "^1.0.4", 
+    "@mrnima/tiktok-downloader":"1.0.0",
+    "@mrnima/facebook-downloader":"1.0.0",
+    "mrnima-moviedl":"1.0.0",
+    "openai": "^4.7.0",
+  "@google/genai":"1.22.0"
   }
 }
