--- a/package.json
+++ b/package.json
@@ -8,17 +8,17 @@
     "stop": "pm2 stop RANUMITHA-X-MD",
     "restart": "pm2 restart RANUMITHA-X-MD"
   },
-"dependencies": {
-    "@whiskeysockets/baileys": "^6.7.21",
+  "dependencies": {
+    "@whiskeysockets/baileys": "7.0.0-rc.9",
     "@adiwajshing/keyed-db": "latest",
     "@dark-yasiya/yt-dl.js": "1.0.5",
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "@vitalets/google-translate-api": "^9.2.1",
-    "@dark-yasiya/scrap":"1.0.1",    
+    "@dark-yasiya/scrap": "1.0.1",
     "pino": "^7.0.5",
     "pm2": "^6.0.8",
     "util": "^0.12.4",
-    "jimp": "^0.16.1",
+    "jimp": "^1.6.0",
     "express": "latest",
     "moment-timezone": "^0.6.0",
     "axios": "^1.7.9",
@@ -39,17 +39,14 @@
     "pdfkit": "^0.17.1",
     "wa_set_pkg": "1.0.5",
     "wa-sticker-formatter": "^4.4.4",
-    "path": "^0.12.7",
-    "vm": "^0.1.0",
     "adm-zip": "^0.5.16",
     "cheerio": "^1.0.0-rc.12",
-    "ruhend-scraper" : "8.0.3",
+    "ruhend-scraper": "8.0.3",
     "qrcode-terminal": "^0.12.0",
-    "yt-search":"2.11.1",
+    "yt-search": "2.11.1",
     "sequelize": "^6.37.5",
     "sqlite3": "^5.1.7",
-    "vm": "^0.1.0",
-    "api-dylux":"latest",
+    "api-dylux": "latest",
     "acrcloud": "^1.4.0",
     "dotenv": "^16.0.0",
     "javascript-obfuscator": "^4.0.0",
@@ -58,11 +55,11 @@
     "node-webpmux": "^3.1.0",
     "@octokit/rest": "latest",
     "pdf-lib": "^1.17.1",
-    "qrcode-reader": "^1.0.4", 
-    "@mrnima/tiktok-downloader":"1.0.0",
-    "@mrnima/facebook-downloader":"1.0.0",
-    "mrnima-moviedl":"1.0.0",
+    "qrcode-reader": "^1.0.4",
+    "@mrnima/tiktok-downloader": "1.0.0",
+    "@mrnima/facebook-downloader": "1.0.0",
+    "mrnima-moviedl": "1.0.0",
     "openai": "^4.7.0",
-  "@google/genai":"1.22.0"
+    "@google/genai": "1.22.0"
   }
 }
